--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@ v2.023a — Change Log (THIS FILE ONLY)
 3) Chart gesture protection:
    - Carousel swipes are ignored when a gesture starts inside #canvasWrap or on the canvas itself.
    - “Swipe zones” above/below chart are safe for panel swipes.
-4) Chart rendering is NOT implemented in index.html.
-   - Chart owner: js/chart.js (File 7). index calls window.VTChart if present.
+4) Chart rendering is owned by js/chart.js (File 7), but index now:
+   - Loads records once (best-effort) into window.VTApp.records
+   - Calls window.VTChart.init({ canvas, wrap, noteEl, getRecords }) if present
+   - Calls window.VTChart.onShow() when Charts panel becomes active
+   - Updates the Charts “Loading…” line with explicit status text even if chart module fails
 5) Add flow is NOT implemented in index.html.
-   - Add owner: js/add.js (future file). For now, the Add button routes to a placeholder panel note.
+   - Add owner: js/add.js (future file). For now, the Add button shows a clear placeholder alert.
+6) Log rendering is NOT implemented in index.html.
+   - Log owner: js/log.js/ui.js (future files). For now, Log shows a stable placeholder note.
 
 Release Schema (v2.023 series; one-file-at-a-time)
 1) index.html  (this file)
@@ -37,6 +42,7 @@ Release Schema (v2.023 series; one-file-at-a-time)
 
 Hard Rules (anti-drift)
 - Chart drawing logic lives ONLY in js/chart.js.
+  - Chart change requests (bands opacity, right padding, x-label overlap rules) will be implemented in js/chart.js.
 - Swipe rules live ONLY in js/gestures.js (later), except the minimal protective gate kept here.
 - Do not rename IDs listed below without changing dependent modules.
 
@@ -45,6 +51,11 @@ Key IDs (contract)
 - Chart: #canvasWrap, #chartCanvas, #chartsSwipeTop, #chartsSwipeBottom, #chartsTopNote
 - Home buttons: #btnGoAdd, #btnGoCharts, #btnGoLog
 - Settings buttons: #btnSettings, #btnBackFromSettings
+
+Touched Files In This Upgrade (order enforced)
+- (1) index.html (this file) — touched now
+- (2) js/version.js — planned next
+- Others — planned later; DO NOT ASSUME they are updated unless explicitly delivered in-order
 -->
 
 <!doctype html>
@@ -493,13 +504,79 @@ Key IDs (contract)
     (function(){
       const APP_VERSION = "v2.023a";
 
-      // Version text
+      // ===== Version text =====
       const bootText = document.getElementById("bootText");
       const homeVersion = document.getElementById("homeVersion");
       if(bootText) bootText.textContent = "BOOT OK " + APP_VERSION;
       if(homeVersion) homeVersion.textContent = APP_VERSION;
 
-      // Panel refs
+      // ===== Minimal app bridge (stable contract for modules) =====
+      const chartsTopNote = document.getElementById("chartsTopNote");
+      const logTopNote = document.getElementById("logTopNote");
+      const chartCanvas = document.getElementById("chartCanvas");
+      const canvasWrap = document.getElementById("canvasWrap");
+
+      function setChartsStatus(msg){
+        if(chartsTopNote) chartsTopNote.textContent = msg;
+      }
+      function setLogStatus(msg){
+        if(logTopNote) logTopNote.textContent = msg;
+      }
+
+      // Best-effort record loader (no assumptions about module APIs).
+      // Goal: populate window.VTApp.records so chart.js can render.
+      async function loadRecordsBestEffort(){
+        // 1) If a store module exposes getAll()/list(), use it.
+        const candidates = [
+          () => (window.VTStore && window.VTStore.getAll && window.VTStore.getAll()),
+          () => (window.VTStore && window.VTStore.list && window.VTStore.list()),
+          () => (window.Store && window.Store.getAll && window.Store.getAll()),
+          () => (window.VTStorage && window.VTStorage.getAll && window.VTStorage.getAll()),
+          () => (window.VTStorage && window.VTStorage.list && window.VTStorage.list()),
+          () => (window.storage && window.storage.getAll && window.storage.getAll()),
+        ];
+
+        for(const fn of candidates){
+          try{
+            const out = fn();
+            if(out && typeof out.then === "function"){
+              const v = await out;
+              if(Array.isArray(v)) return v;
+            } else if(Array.isArray(out)) {
+              return out;
+            }
+          }catch(_){}
+        }
+
+        // 2) LocalStorage fallback (common legacy keys). Non-destructive.
+        const keys = [
+          "vitals_tracker_records_v1",
+          "vitals_tracker_records",
+          "vitalsTrackerRecords",
+          "vt_records",
+          "records",
+        ];
+
+        for(const k of keys){
+          try{
+            const raw = localStorage.getItem(k);
+            if(!raw) continue;
+            const parsed = JSON.parse(raw);
+            if(Array.isArray(parsed)) return parsed;
+            if(parsed && Array.isArray(parsed.records)) return parsed.records;
+          }catch(_){}
+        }
+
+        return [];
+      }
+
+      // Expose stable bridge.
+      window.VTApp = window.VTApp || {};
+      window.VTApp.version = APP_VERSION;
+      window.VTApp.records = [];
+      window.VTApp.getRecords = () => window.VTApp.records;
+
+      // ===== Panels (carousel) =====
       const panels = {
         home: document.getElementById("panelHome"),
         charts: document.getElementById("panelCharts"),
@@ -511,7 +588,47 @@ Key IDs (contract)
       let active = "home";
       let lastNonSettings = "home";
 
-      function setActive(which){
+      async function ensureDataLoaded(){
+        // If already loaded, no-op.
+        if(Array.isArray(window.VTApp.records) && window.VTApp.records.length) return;
+
+        setChartsStatus("Loading…");
+        setLogStatus("Loading…");
+
+        const recs = await loadRecordsBestEffort();
+        window.VTApp.records = Array.isArray(recs) ? recs : [];
+
+        const n = window.VTApp.records.length;
+        if(n){
+          // Best-effort last timestamp for visibility (no hard assumptions).
+          let lastMs = null;
+          for(const r of window.VTApp.records){
+            const t = (r && (r.ts ?? r.time ?? r.timestamp ?? r.date ?? r.createdAt ?? r.created_at ?? r.iso)) || null;
+            const ms = new Date(t || 0).getTime();
+            if(Number.isFinite(ms) && ms > 0) lastMs = (lastMs == null) ? ms : Math.max(lastMs, ms);
+          }
+          const lastStr = (lastMs != null) ? new Date(lastMs).toLocaleString() : "—";
+          setChartsStatus(`${n} records loaded • last: ${lastStr}`);
+          setLogStatus(`${n} records loaded (rendering will be restored after chart stability).`);
+        } else {
+          setChartsStatus("No records found on this device.");
+          setLogStatus("No records found on this device.");
+        }
+
+        // Initialize chart module if present (safe, non-fatal).
+        try{
+          if(window.VTChart && typeof window.VTChart.init === "function"){
+            window.VTChart.init({
+              canvas: chartCanvas,
+              wrap: canvasWrap,
+              noteEl: chartsTopNote,
+              getRecords: window.VTApp.getRecords
+            });
+          }
+        }catch(_){}
+      }
+
+      async function setActive(which){
         for(const k of Object.keys(panels)){
           const el = panels[k];
           if(el) el.classList.toggle("active", k === which);
@@ -519,7 +636,12 @@ Key IDs (contract)
         if(which !== "settings") lastNonSettings = which;
         active = which;
 
-        // On entering charts, ask chart module to render (if present)
+        // Always ensure data is loaded before trying to show charts/log.
+        if(which === "charts" || which === "log"){
+          await ensureDataLoaded();
+        }
+
+        // On entering charts, ask chart module to render (if present).
         if(which === "charts"){
           try{
             if(window.VTChart && typeof window.VTChart.onShow === "function"){
@@ -540,27 +662,28 @@ Key IDs (contract)
         setActive(carousel[(i-1 + carousel.length) % carousel.length]);
       }
 
-      // Buttons
-      document.getElementById("btnGoAdd").addEventListener("click", () => {
-        // Input restoration happens in later files; keep user informed
+      // ===== Buttons =====
+      const el = (id) => document.getElementById(id);
+
+      el("btnGoAdd").addEventListener("click", () => {
         alert("Add/Input restoration is part of v2.023 (will be restored after chart stability).");
       });
-      document.getElementById("btnGoCharts").addEventListener("click", () => setActive("charts"));
-      document.getElementById("btnGoLog").addEventListener("click", () => setActive("log"));
+      el("btnGoCharts").addEventListener("click", () => setActive("charts"));
+      el("btnGoLog").addEventListener("click", () => setActive("log"));
 
-      document.getElementById("btnHomeFromCharts").addEventListener("click", () => setActive("home"));
-      document.getElementById("btnHomeFromLog").addEventListener("click", () => setActive("home"));
+      el("btnHomeFromCharts").addEventListener("click", () => setActive("home"));
+      el("btnHomeFromLog").addEventListener("click", () => setActive("home"));
 
       const openSettings = () => setActive("settings");
-      document.getElementById("btnSettings").addEventListener("click", openSettings);
-      document.getElementById("btnSettingsFromCharts").addEventListener("click", openSettings);
-      document.getElementById("btnSettingsFromLog").addEventListener("click", openSettings);
+      el("btnSettings").addEventListener("click", openSettings);
+      el("btnSettingsFromCharts").addEventListener("click", openSettings);
+      el("btnSettingsFromLog").addEventListener("click", openSettings);
 
-      document.getElementById("btnBackFromSettings").addEventListener("click", () => {
+      el("btnBackFromSettings").addEventListener("click", () => {
         setActive(lastNonSettings || "home");
       });
 
-      // Pull-to-refresh (Home only)
+      // ===== Pull-to-refresh (Home only) =====
       const pullIndicator = document.getElementById("pullIndicator");
       let pullStartY = null;
       let pullArmed = false;
@@ -591,8 +714,8 @@ Key IDs (contract)
         if(armed) location.reload();
       });
 
-      // Install handling
-      const btnInstall = document.getElementById("btnInstall");
+      // ===== Install handling =====
+      const btnInstall = el("btnInstall");
       let deferredPrompt = null;
       window.addEventListener("beforeinstallprompt", (e) => {
         e.preventDefault();
@@ -610,8 +733,8 @@ Key IDs (contract)
         }
       });
 
-      // Clear data (best-effort)
-      document.getElementById("btnClearData").addEventListener("click", () => {
+      // ===== Clear data (best-effort) =====
+      el("btnClearData").addEventListener("click", () => {
         const ok = confirm("Clear all local data on this device?");
         if(!ok) return;
         try{ localStorage.clear(); }catch(_){}
@@ -627,8 +750,8 @@ Key IDs (contract)
         location.reload();
       });
 
-      // Exit (known-good pattern)
-      document.getElementById("btnExit").addEventListener("click", () => {
+      // ===== Exit (known-good pattern) =====
+      el("btnExit").addEventListener("click", () => {
         try{
           window.close();
           setTimeout(() => {
@@ -639,15 +762,14 @@ Key IDs (contract)
         }
       });
 
-      // Carousel swipe gestures (minimal gate; chart protection here)
+      // ===== Carousel swipe gestures (minimal gate; chart protection here) =====
       const panelsRoot = document.getElementById("panelsRoot");
-      const canvasWrap = document.getElementById("canvasWrap");
 
       let swipe = { active:false, sx:0, sy:0, ok:false, mode:null };
 
-      function within(el, target){
-        if(!el || !target) return false;
-        return el === target || el.contains(target);
+      function within(elm, target){
+        if(!elm || !target) return false;
+        return elm === target || elm.contains(target);
       }
 
       function isSwipeAllowedStart(target){
@@ -696,14 +818,37 @@ Key IDs (contract)
         if(dx < 0) nextPanel(); else prevPanel();
       }, {passive:true});
 
-      // Service worker
+      // ===== Service worker =====
       if("serviceWorker" in navigator){
         navigator.serviceWorker.register("./sw.js?v=2.023a").catch(()=>{});
       }
 
-      // Initial panel
+      // ===== Boot =====
+      // Ensure Charts/Log show deterministic status even before user navigates.
+      setChartsStatus("Loading…");
+      setLogStatus("Loading…");
+      ensureDataLoaded().catch(()=>{});
       setActive("home");
+
     })();
   </script>
+
+  <!--
+  EOF Version Notes (VISIBLE AT BOTTOM FOR MOBILE/BLIND WORKFLOW)
+  File: index.html
+  App Version: v2.023a
+  Base: v2.021 (reconstructed index shell)
+  This file is: 1 of 10 (v2.023 series)
+
+  What this file guarantees:
+  - Shows version in BOOT and Home footer
+  - Loads records best-effort into window.VTApp.records
+  - Calls VTChart.init(...) if chart module exists
+  - Calls VTChart.onShow() when Charts panel is entered
+  - Carousel swipe loop: Home → Charts → Log → Settings → Home
+  - Chart gesture protection: no panel swipe if touch starts inside chart region
+
+  Next file planned: (2) js/version.js
+  -->
 </body>
 </html>
